markup, fix indentation issues, nested lists, etc.  Working from most
recent to oldest, I've edited back to release 110.46 (2004/06/17).

//////////////////////////////////////////////////////////////////////

//====================================================================
== Recent updates

//--------------------------------------------------------------------
[2017/10/16]::
+
Moved the check for whether a int or word literal is in range for
its type from the absyn->plambda translation to the overload
resolver (++compiler/Elaborator/types/overload.sml++).
+
owner:[John Reppy,http://cs.uchicago.edu/~jhr]

//--------------------------------------------------------------------
[2017/10/14]::
+
Part 1 of an overhaul of the way that the compiler treats int/word
literals.  The end goal is to use ++IntInf.int++ to represent literals
throughout all phases of the compiler.  In this step, we changed the
representation of literals in the ++Absyn++ representation (earlier
representations already used IntInf.int).
+
owner:[John Reppy,http://cs.uchicago.edu/~jhr]

//====================================================================
== Version 110.82; 2017/10/16

//--------------------------------------------------------------------
[2017/10/01]::
+
Fixed unnumbered bug in ++IntInf.mod++ and ++IntInf.rem++ functions,
where the ++Div++ exception was *not* getting raised when both
arguments are ++0++.
+
owner:[John Reppy,http://cs.uchicago.edu/~jhr]

//--------------------------------------------------------------------
[2017/09/20]::
+
Various bits of cleanup in the handling of primitive operations, such
as removing the +ptnum+ mechanism for translating from Absyn to FLINT.
+
owner:[David MacQueen,http://cs.uchicago.edu/~dbm]

//--------------------------------------------------------------------
[2017/09/20]::
+
Added +Target+ module, which specifies the properties of the target
(__e.g.__, the size in bits of the default int type).  Reworked the